--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         const data = await response.json();
         console.log(data); // Debug
 
-        // 🧪 Données de test (à enlever après test)
+        // 🧪 Données de test
         data.percentageCompleted = 0.75;
         data.etaProgressBased = new Date(Date.now() + 7 * 24 * 60 * 60 * 1000).toISOString();
 
