--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
       </label>
     </div>
 
-    <!-- Divider -->
     <hr class="my-6 border-t border-gray-300" />
 
     <!-- Toggle switch -->
@@ -73,7 +72,7 @@
     </div>
   </div>
 
-  <!-- Simple Spinner -->
+  <!-- Spinner -->
   <div id="spinner" class="hidden fixed top-0 left-0 w-full h-full bg-green-50 bg-opacity-50 flex items-center justify-center z-50">
     <div class="animate-spin rounded-full h-16 w-16 border-4 border-green-600 border-t-transparent"></div>
   </div>
@@ -127,9 +126,9 @@
         if (!response.ok) throw new Error("Erreur HTTP");
 
         const data = await response.json();
-        console.log(data); // Debug
+        console.log(data);
 
-        // 🧪 Données de test
+        // 🧪 Données de test (retire-les plus tard)
         data.percentageCompleted = 0.75;
         data.etaProgressBased = new Date(Date.now() + 7 * 24 * 60 * 60 * 1000).toISOString();
 
@@ -141,13 +140,22 @@
           <p><strong>📆 DevTime Goal:</strong> ${data.devTimeGoal} days</p>
           ${data.firstInProgressDate ? `<p><strong>🕒 Dev Started:</strong> ${new Date(data.firstInProgressDate).toLocaleDateString()}</p>` : ''}
           ${data.eta ? `<p><strong>🚀 ETA Goal:</strong> ${new Date(data.eta).toLocaleDateString()}</p>` : '<p>🚫 No ticket in "In Progress"</p>'}
-          ${data.percentageCompleted > 0.5 ? `
-            <p class="text-center mt-4 text-yellow-800 bg-yellow-100 p-3 rounded flex items-center justify-center gap-2">
-              ⚠️ It looks like ${(data.percentageCompleted * 100).toFixed(0)}% of the feature is already completed.
-              Based on the progression and the remaining work, a more accurate ETA target would be <strong>${new Date(data.etaProgressBased).toLocaleDateString()}</strong>.
-            </p>
-          ` : ''}
         `;
+
+        if (data.percentageCompleted > 0.5) {
+          resultDiv.innerHTML += `
+            <div class="text-center mt-4 text-yellow-800 bg-yellow-100 p-3 rounded">
+              <p class="flex items-center justify-center gap-2">
+                ⚠️ It looks like ${(data.percentageCompleted * 100).toFixed(0)}% of the feature is already completed.
+                Based on the progression and the remaining work, a more accurate ETA target would be
+              </p>
+              <p class="font-semibold mt-1">
+                ${new Date(data.etaProgressBased).toLocaleDateString()}
+              </p>
+            </div>
+          `;
+        }
+
       } catch (err) {
         resultDiv.innerHTML = `<p class="text-red-600">❌ Error while trying to get data.</p>`;
         console.error(err);
