--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       </label>
     </div>
 
+    <!-- Divider -->
     <hr class="my-6 border-t border-gray-300" />
 
     <!-- Toggle switch -->
@@ -72,7 +73,7 @@
     </div>
   </div>
 
-  <!-- Spinner -->
+  <!-- Simple Spinner -->
   <div id="spinner" class="hidden fixed top-0 left-0 w-full h-full bg-green-50 bg-opacity-50 flex items-center justify-center z-50">
     <div class="animate-spin rounded-full h-16 w-16 border-4 border-green-600 border-t-transparent"></div>
   </div>
@@ -126,37 +127,25 @@
         if (!response.ok) throw new Error("Erreur HTTP");
 
         const data = await response.json();
-        console.log("Data received:", data);
-        console.log("percentageCompleted:", data.percentageCompleted);
-        console.log("etaProgressBased:", data.etaProgressBased);
 
         resultDiv.innerHTML = `
-          <p><strong>🧩 Epic:</strong> ${data.epic || '—'}</p>
+          <p><strong>🧩 Epic:</strong> ${data.epic}</p>
           <p><strong>📋 # Tickets:</strong> ${data.ticketCount}</p>
           <p><strong>✅ Total SP:</strong> ${data.totalSP}</p>
           <p><strong>🧮 Estimated SP:</strong> ${data.estimatedSP}</p>
           <p><strong>📆 DevTime Goal:</strong> ${data.devTimeGoal} days</p>
           ${data.firstInProgressDate ? `<p><strong>🕒 Dev Started:</strong> ${new Date(data.firstInProgressDate).toLocaleDateString()}</p>` : ''}
           ${data.eta ? `<p><strong>🚀 ETA Goal:</strong> ${new Date(data.eta).toLocaleDateString()}</p>` : '<p>🚫 No ticket in "In Progress"</p>'}
+          ${data.percentageCompleted > 0.5 ? `
+            <p class="text-center mt-4 text-yellow-700 flex items-center justify-center gap-2">
+              ⚠️ It looks like ${(data.percentageCompleted * 100).toFixed(0)}% of the feature is already completed.
+              Based on the progression and the remaining work, a more accurate ETA target would be <strong>${new Date(data.etaProgressBased).toLocaleDateString()}</strong>.
+            </p>
+          ` : ''}
         `;
-
-        if (data.percentageCompleted > 0.5 && data.etaProgressBased) {
-          resultDiv.innerHTML += `
-            <div class="text-center mt-4 text-yellow-800 bg-yellow-100 p-3 rounded">
-              <p class="flex items-center justify-center gap-2">
-                ⚠️ It looks like ${(data.percentageCompleted * 100).toFixed(0)}% of the feature is already completed.
-                Based on the progression and the remaining work, a more accurate ETA target would be
-              </p>
-              <p class="font-semibold mt-1">
-                ${new Date(data.etaProgressBased).toLocaleDateString()}
-              </p>
-            </div>
-          `;
-        }
-
       } catch (err) {
         resultDiv.innerHTML = `<p class="text-red-600">❌ Error while trying to get data.</p>`;
-        console.error("Caught error:", err);
+        console.error(err);
       } finally {
         spinner.classList.add('hidden');
       }
