--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
         const data = await response.json();
 
         resultDiv.innerHTML = `
-          <p><strong>🧩 Epic:</strong> ${data.epic}</p>
-          <p><strong>📋 # Tickets:</strong> ${data.ticketCount}</p>
-          <p><strong>✅ Total SP:</strong> ${data.totalSP}</p>
-          <p><strong>🧮 Estimated SP:</strong> ${data.estimatedSP}</p>
-          <p><strong>📆 DevTime Goal:</strong> ${data.devTimeGoal} days</p>
-          ${data.firstInProgressDate ? `<p><strong>🕒 Dev Started:</strong> ${new Date(data.firstInProgressDate).toLocaleDateString()}</p>` : ''}
-          ${data.eta ? `<p><strong>🚀 ETA Goal:</strong> ${new Date(data.eta).toLocaleDateString()}</p>` : '<p>🚫 No ticket in "In Progress"</p>'}
+          <p><strong>🧩 Epic(s):</strong> ${data.epic}</p>
+          <p><strong>📋 #Tickets:</strong> ${data.ticketCount}</p>
+          <p><strong>✅ #SP:</strong> ${data.totalSP}</p>
+          <p><strong>🧮 #SP estimated:</strong> ${data.estimatedSP}</p>
+          <p><strong>📆 Development Time Goal:</strong> ${data.devTimeGoal} days</p>
+          ${data.firstInProgressDate ? `<p><strong>🕒 First ticket in progress:</strong> ${new Date(data.firstInProgressDate).toLocaleDateString()}</p>` : ''}
+          ${data.eta ? `<p><strong>🚀 ETA (Progress not considered):</strong> ${new Date(data.eta).toLocaleDateString()}</p>` : '<p>🚫 No ticket in "In Progress"</p>'}
           ${data.percentageCompleted > 0.5 ? `
             <div class="text-center mt-4 text-yellow-700">
               <p>⚠️ It looks like ${(data.percentageCompleted * 100).toFixed(0)}% of the feature is already completed.</p>
