--- a/index.html
+++ b/index.html
@@ -105,6 +105,22 @@
       return toggle.getAttribute('aria-checked') === 'true';
     }
 
+    // Helpers for safe formatting
+    function fmtDate(value) {
+      if (!value) return '—';
+      const d = new Date(value);
+      return isNaN(d.getTime()) ? '—' : d.toLocaleDateString();
+    }
+    function fmtPercent(value) {
+      if (typeof value !== 'number') return '—';
+      const pct = value <= 1 ? value * 100 : value; // accept 0–1 or 0–100
+      return `${Math.round(pct)}%`;
+    }
+    function fmtNumber(value, suffix = '') {
+      if (value === null || value === undefined || value === '') return '—';
+      return `${value}${suffix}`;
+    }
+
     async function sendInput() {
       const input = document.getElementById('userInput').value.trim();
       const thirdParty = getThirdPartyValue();
@@ -124,25 +140,17 @@
           })
         });
 
-        if (!response.ok) throw new Error("Erreur HTTP");
+        if (!response.ok) throw new Error("HTTP error");
 
         const data = await response.json();
 
+        // ⬇️ ONLY show "ETA Based on Progress"
         resultDiv.innerHTML = `
-          <h4 class="text-md font-semibold text-green-700 mb-2">ETA Based on Start Date</h4>
-          <p><strong>🧩 Epic(s):</strong> ${data.epic}</p>
-          <p><strong>📋 #Tickets:</strong> ${data.ticketCount}</p>
-          <p><strong>✅ #SP:</strong> ${data.totalSP}</p>
-          <p><strong>🧮 #SP estimated:</strong> ${data.estimatedSP}</p>
-          <p><strong>📆 Development Time Goal:</strong> ${data.devTimeGoal} days</p>
-          ${data.firstInProgressDate ? `<p><strong>🕒 First ticket in progress:</strong> ${new Date(data.firstInProgressDate).toLocaleDateString()}</p>` : ''}
-          ${data.eta ? `<p><strong>🚀 ETA (Progress not considered):</strong> ${new Date(data.eta).toLocaleDateString()}</p>` : '<p>🚫 No ticket in "In Progress"</p>'}
-
-          <h4 class="text-md font-semibold text-green-700 mt-4 mb-2">ETA Based on Progress</h4>
-          <p><strong>📊 Percentage completed:</strong> ${(data.percentageCompleted * 100).toFixed(0)}%</p>
-          <p><strong>🧮 #SP remaining estimated:</strong> ${data.estimatedSP_ProgressBased} SP</p>
-          <p><strong>📆 Development Time Goal:</strong> ${data.devTimeGoal_ProgressBased} days</p>
-          <p><strong>🚀 ETA:</strong> ${new Date(data.etaProgressBased).toLocaleDateString()}</p>
+          <h4 class="text-md font-semibold text-green-700 mt-0 mb-2">ETA Based on Progress</h4>
+          <p><strong>📊 Percentage completed:</strong> ${fmtPercent(data.percentageCompleted)}</p>
+          <p><strong>🧮 #SP remaining estimated:</strong> ${fmtNumber(data.estimatedSP_ProgressBased, ' SP')}</p>
+          <p><strong>📆 Development Time Goal:</strong> ${fmtNumber(data.devTimeGoal_ProgressBased, ' days')}</p>
+          <p><strong>🚀 ETA:</strong> ${fmtDate(data.etaProgressBased)}</p>
         `;
       } catch (err) {
         resultDiv.innerHTML = `<p class="text-red-600">❌ Error while trying to get data.</p>`;
