--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     <label class="block mb-2 font-medium">Epic(s) Keys</label>
     <div class="flex gap-3 items-center mb-2">
-      <input 
-        type="text" 
-        id="userInput" 
-        placeholder="BUILDER-2602, MAT-2453" 
+      <input
+        type="text"
+        id="userInput"
+        placeholder="BUILDER-2602, MAT-2453"
         class="flex-1 px-3 py-2 border border-green-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-400"
       />
     </div>
@@ -45,10 +45,10 @@
       <label for="thirdPartyToggle" class="text-sm text-gray-700 font-medium">
         This feature involves a third-party tool
       </label>
-      <button 
-        id="thirdPartyToggle" 
-        class="relative w-12 h-6 bg-gray-300 rounded-full transition-colors duration-300 focus:outline-none" 
-        role="switch" 
+      <button
+        id="thirdPartyToggle"
+        class="relative w-12 h-6 bg-gray-300 rounded-full transition-colors duration-300 focus:outline-none"
+        role="switch"
         aria-checked="false"
         onclick="toggleSwitch(this)"
       >
@@ -57,10 +57,10 @@
     </div>
 
     <!-- Estimate button -->
-    <button 
-      id="estimateBtn" 
-      onclick="sendInput()" 
-      disabled 
+    <button
+      id="estimateBtn"
+      onclick="sendInput()"
+      disabled
       class="w-full bg-green-600 hover:bg-green-700 text-white py-2 rounded-lg font-semibold transition disabled:bg-green-300"
     >
       Estimate
@@ -105,28 +105,41 @@
       return toggle.getAttribute('aria-checked') === 'true';
     }
 
-    // Helpers for safe formatting
+    // ---------- Helpers robustes ----------
+    function toNum(value) {
+      const n = Number(
+        typeof value === 'string' ? value.trim().replace(',', '.') : value
+      );
+      return Number.isFinite(n) ? n : null;
+    }
+
     function fmtDate(value) {
       if (!value) return '—';
       const d = new Date(value);
       return isNaN(d.getTime()) ? '—' : d.toLocaleDateString();
     }
+
     function fmtPercent(value) {
-      if (typeof value !== 'number') return '—';
-      const pct = value <= 1 ? value * 100 : value; // accept 0–1 or 0–100
+      const num = toNum(value);
+      if (num === null) return '—';
+      const pct = num <= 1 ? num * 100 : num; // accepte 0–1 ou 0–100
       return `${Math.round(pct)}%`;
     }
+
     function fmtNumber(value, suffix = '') {
-      if (value === null || value === undefined || value === '') return '—';
-      return `${value}${suffix}`;
+      const num = toNum(value);
+      if (num === null) return '—';
+      const display = Number.isInteger(num) ? num.toString() : num.toFixed(2);
+      return `${display}${suffix}`;
     }
+    // --------------------------------------
 
     async function sendInput() {
       const input = document.getElementById('userInput').value.trim();
       const thirdParty = getThirdPartyValue();
       const resultDiv = document.getElementById('result');
       const spinner = document.getElementById('spinner');
-      
+
       resultDiv.innerHTML = '';
       spinner.classList.remove('hidden');
 
@@ -134,7 +147,7 @@
         const response = await fetch('https://n8n.swapcard.com/n8nhook/80999c4d-fa5b-499c-ac58-7ecc4787f5d7', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ 
+          body: JSON.stringify({
             texte: input,
             thirdPartyInvolved: thirdParty
           })
@@ -144,7 +157,7 @@
 
         const data = await response.json();
 
-        // ⬇️ ONLY show "ETA Based on Progress"
+        // ✅ ONLY show "ETA Based on Progress"
         resultDiv.innerHTML = `
           <h4 class="text-md font-semibold text-green-700 mt-0 mb-2">ETA Based on Progress</h4>
           <p><strong>📊 Percentage completed:</strong> ${fmtPercent(data.percentageCompleted)}</p>
